WexGit/Wex_DX/force-app/main/default/objects/WE_FEP_History__c/fields/Account_Overview__c.field-meta.xml
<CustomField>
    <fullName>Account_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Overview</label>
    <referenceTo>Virtual_FEP__c</referenceTo>
    <relationshipName>Account_Overview_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>