WexGit/Wex_DX/force-app/main/default/objects/WE_FEP_History__c/fields/Account_Overview_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Overview_Owner_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Overview Owner Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>