WexGit/Wex_DX/force-app/main/default/objects/WE_FEP_History__c/fields/Addressable_Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Addressable_Annual_Spend__c</fullName>
    <label>Addressable Annual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>