WexGit/Wex_DX/force-app/main/default/objects/WE_FEP_History__c/fields/Group_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Group_Turnover__c</fullName>
    <label>(Group) Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>