WexGit/Wex_DX/force-app/main/default/objects/WE_FEP_History__c/fields/Total_Spend_Known__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend_Known__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Spend Known</label>
    <type>Checkbox</type>
</CustomField>