WexGit/Wex_DX/force-app/main/default/objects/WE_FEP_History__c/fields/Value_Of_WE_Spend__c.field-meta.xml
<CustomField>
    <fullName>Value_Of_WE_Spend__c</fullName>
    <label>Value Of WE Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>