WexGit/Wex_DX/force-app/main/default/objects/WE_FEP_History__c/fields/WE_Share_Of_Spend__c.field-meta.xml
<CustomField>
    <fullName>WE_Share_Of_Spend__c</fullName>
    <label>WE Share Of Spend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>